# NexusVM

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  package.json
.github/workflows/: ci.yml
include/hypervisor/: types.h
src/: main.rs
src/hypervisor/: hypervisor.c  hypervisor.h
src/hypervisor/amd-v/: svm.c  svm.h
src/hypervisor/checkpoint/: checkpoint.c  checkpoint.h
src/hypervisor/io/: io_emul.c  io_emul.h
src/hypervisor/migration/: migration.c  migration.h
src/hypervisor/mmu/: ept.c  ept.h
src/hypervisor/nested/: nested_virt.c  nested_virt.h
src/hypervisor/sched/: scheduler.c  scheduler.h
src/hypervisor/vmx/: vmx.c  vmx.h
src/utils/: log.c  log.h
src/vmx/: asm.S
