[package]
name = "nexusvm"
version = "0.1.0"
edition = "2021"
authors = ["moggan1337"]
description = "NexusVM - A Type-1 Hypervisor for x86-64 Virtualization"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
lazy_static = "1.4"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "nexusvm"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
